<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:id="@+id/main">

    <TextView
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/hello_twitter"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@android:color/white"
    android:background="@android:color/holo_purple"
    android:padding="10dp"
    />

    <LinearLayout android:id="@+id/uname_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/fld_username"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical"
            android:hint="@string/lbl_enter_username"
            />

    </LinearLayout>
    <LinearLayout android:id="@+id/passwd_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname_block"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/fld_password"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical"
            android:hint="@string/lbl_enter_password"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwd_block"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="@string/btn_login"/>

</RelativeLayout>
